a fix (bug #6267: ENUM ... NOT NULL w/o default treated differently than other data types). the behavior of enum changed to be consistent.

mysql-test/r/system_mysql_db.result:
  a fix (bug #6267: ENUM ... NOT NULL w/o default treated differently than other data types).
mysql-test/r/type_enum.result:
  a fix (bug #6267: ENUM ... NOT NULL w/o default treated differently than other data types).
mysql-test/r/type_ranges.result:
  a fix (bug #6267: ENUM ... NOT NULL w/o default treated differently than other data types).
sql/sql_insert.cc:
  a fix (bug #6267: ENUM ... NOT NULL w/o default treated differently than other data types).
  Don't issue warnings for enum fields.
sql/sql_parse.cc:
  a fix (bug #6267: ENUM ... NOT NULL w/o default treated differently than other data types).
  set NO_DEFAULT_VALUE_FLAG flag for enum fields as well.